--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,18 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  background-color: #2A0A4A;
+  background-image: url("./assets/bg.png");
+  background-size: 70em 206%;
+  background-repeat: no-repeat;
+  background-position: right;
+  color: #ecf0f3;
 
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+h2{
+  opacity: 35%;
 }
